# Jira-and-confluence-

./: .env_ejemplo  .env_ejemplo   .gitignore  .py  CLAUDE.md  Qa_form.html  README.md  Server.JS  actividades.html  bg_reporter.js  bg_verificacion.html  board-switcher.js  bulk-epic.js  cfg.js  connect.html  epic-filter.js  history.html  icons.js  jira_editor.html  labels.js  qa_history_001.json  releases.js  setup.html  setup_epics.js  styles.css
context/: README.md  architecture.md  config.md  conventions.md  current-state.md  flows.md  jira.md
mcp-confluence/: README.md  env.example.txt  pyproject.toml
mcp-confluence/confluence_mcp/: __init__.py  client.py  server.py
responsive-proxy/: DEPENDENCIAS.txt  README.md  comando.txt  devices.env  proxy.env  proxy.js  start.sh  tablet.sh  urls.env
