[project]
name = "confluence-mcp"
version = "0.1.0"
description = "MCP server for Atlassian Confluence — pages, attachments, comments, labels, whiteboards, spaces, users."
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
confluence-mcp = "confluence_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["confluence_mcp"]
